| Summary: | ASTERISK-27812: When the ooh323 debug is on there is no ringing signal to incoming calls via H323 trunk. | ||
| Reporter: | Dimos (dtrich0) | Labels: | |
| Date Opened: | 2018-04-18 10:12:23 | Date Closed: | 2018-04-24 06:59:16 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Addons/chan_ooh323 |
| Versions: | 13.19.0 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | DEBIAN 9 | Attachments: | ( 0) full ( 1) h323_log |
| Description: | After I have executed the "ooh323 set debug" in the asterisk console, the caller in the remote pbx (h323 trunk interconnection) does not hearing the calling tone when the local/calling phone is ringing. When I set back off the ooh323 debugging (executing:" ooh323 set debug off") the problem ceased. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2018-04-18 10:12:24.040-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Dimos (dtrich0) 2018-04-18 10:16:11.998-0500 The incoming call with time tag: [Apr 18 16:28:57] has the problem(the ooh323 debug has set ON). By: Alexander Anikin (may213) 2018-04-20 14:05:46.553-0500 Hi, The issue really found and duplicate ASTERISK-26893 By: Dimos (dtrich0) 2018-04-24 06:59:17.023-0500 Well Done :-) By: Friendly Automation (friendly-automation) 2018-04-25 10:22:30.881-0500 Change 8850 merged by Jenkins2: chan_ooh323: fix ooManualProgress/ooManualRingback on ooh323 debuggin on [https://gerrit.asterisk.org/8850|https://gerrit.asterisk.org/8850] By: Friendly Automation (friendly-automation) 2018-04-25 10:42:02.898-0500 Change 8849 merged by Jenkins2: chan_ooh323: fix ooManualProgress/ooManualRingback on ooh323 debuggin on [https://gerrit.asterisk.org/8849|https://gerrit.asterisk.org/8849] By: Friendly Automation (friendly-automation) 2018-04-25 10:47:53.570-0500 Change 8848 merged by Richard Mudgett: chan_ooh323: fix ooManualProgress/ooManualRingback on ooh323 debuggin on [https://gerrit.asterisk.org/8848|https://gerrit.asterisk.org/8848] | ||