addons/chan_ooh323.c
@@ -1281,7 +1281,7 @@ static int ooh323_indicate(struct ast_channel *ast, int condition, const void *d
 
 	struct ooh323_pvt *p = (struct ooh323_pvt *) ast_channel_tech_pvt(ast);
 	char *callToken = (char *)NULL;
-	int res = -1;
+	int res = -1, rres;
 
 	if (!p) return -1;
 
@@ -1328,11 +1328,9 @@ static int ooh323_indicate(struct ast_channel *ast, int condition, const void *d
 	case AST_CONTROL_PROGRESS:
 		if (ast_channel_state(ast) != AST_STATE_UP) {
 	    		if (!p->progsent) {
+				rres = ooManualProgress(callToken);
 	     			if (gH323Debug) {
-					ast_debug(1, "Sending manual progress for %s, res = %u\n", callToken,
-             				ooManualProgress(callToken));
-				} else {
-	     				ooManualProgress(callToken);
+					ast_debug(1, "Sending manual progress for %s, res = %u\n", callToken, rres);
 				}
 	     			p->progsent = 1;
 	    		}
@@ -1341,12 +1339,9 @@ static int ooh323_indicate(struct ast_channel *ast, int condition, const void *d
       case AST_CONTROL_RINGING:
 		if (ast_channel_state(ast) == AST_STATE_RING || ast_channel_state(ast) == AST_STATE_RINGING) {
 			if (!p->alertsent) {
+				rres = ooManualRingback(callToken);
 				if (gH323Debug) {
-					ast_debug(1, "Sending manual ringback for %s, res = %u\n",
-						callToken,
-						ooManualRingback(callToken));
-				} else {
-					ooManualRingback(callToken);
+					ast_debug(1, "Sending manual ringback for %s, res = %u\n", callToken, rres);
 				}
 				p->alertsent = 1;
 			}
